swagger doc queryhandler
