# app/docs/swagger.json
@@ -30,9 +30,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "Busqueda exitosa",
                         "schema": {
-                            "$ref": "#/definitions/http.SearchResult"
+                            "type": "string"
                         }
                     }
                 }
@@ -67,14 +67,6 @@
             "type": "object",
             "properties": {
                 "query": {
-                    "type": "string"
-                }
-            }
-        },
-        "http.SearchResult": {
-            "type": "object",
-            "properties": {
-                "EmailsEncontrados": {
                     "type": "string"
                 }
             }
